<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.Cadastro">

    <EditText
        android:id="@+id/emailRegistro"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="146dp"
        android:layout_marginEnd="19dp"
        android:layout_marginRight="19dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/senhaRegistro"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailRegistro"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:password="true" />

    <Button
        android:id="@+id/btnRegistro"
        style="@android:style/Widget.Button"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/senhaRegistro"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="104dp"
        android:layout_marginLeft="104dp"
        android:layout_marginTop="50dp"
        android:background="@color/colorPrimary"
        android:text="@string/criar"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btnVoltar"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnRegistro"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="57dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_toEndOf="@+id/btnRegistro"
        android:layout_toRightOf="@+id/btnRegistro"
        android:hint="@string/voltar"
        android:text="@string/voltar" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:textStyle="bold" />

</RelativeLayout>