<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main"
    tools:ignore="ExtraText">

//Linear Geral

    <RelativeLayout
        android:id="@+id/linearGeral"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        //Linear nome da aplicação

        <LinearLayout
            android:id="@+id/linearnomeApp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nomePrincipalHome"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/app_name"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>

        //Linear dos Creditos

        <LinearLayout
            android:id="@+id/linearCredito"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_below="@+id/linearnomeApp"
            android:layout_marginTop="73dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textCredito"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/imageAdd"
                    android:layout_alignEnd="@+id/imageAdd"
                    android:layout_alignRight="@+id/imageAdd"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/credito_home"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/imageAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="33dp"
                    android:src="@drawable/add"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textmoedaC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="38dp"
                    android:layout_marginLeft="38dp"
                    android:layout_marginEnd="46dp"
                    android:layout_marginRight="46dp"
                    android:layout_marginBottom="42dp"
                    android:layout_toStartOf="@+id/valorCreditoHome"
                    android:layout_toLeftOf="@+id/valorCreditoHome"
                    android:layout_toEndOf="@+id/imageAdd"
                    android:layout_toRightOf="@+id/imageAdd"
                    android:text="@string/moeda"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="35sp" />

                <TextView
                    android:id="@+id/valorCreditoHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="99dp"
                    android:layout_marginRight="100dp"
                    android:layout_marginBottom="42dp"
                    android:text="@string/v1"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="40sp" />

            </RelativeLayout>


        </LinearLayout>

        //Linear dos Debitos

        <LinearLayout
            android:id="@+id/linearDebito"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_below="@+id/linearCredito"
            android:layout_marginTop="26dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textDebito"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/imageDel"
                    android:layout_alignEnd="@+id/imageDel"
                    android:layout_alignRight="@+id/imageDel"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/debito_home"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/imageDel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="33dp"
                    android:src="@drawable/del"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textmoedaD2"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginEnd="38dp"
                    android:layout_marginBottom="42dp"
                    android:layout_toStartOf="@+id/valorDebitoHome"
                    android:layout_toEndOf="@+id/imageDel"
                    android:layout_toRightOf="@+id/imageDel"
                    android:text="@string/moeda"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="35sp"
                    tools:ignore="RtlCompat" />

                <TextView
                    android:id="@+id/valorDebitoHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="93dp"
                    android:layout_marginRight="93dp"
                    android:layout_marginBottom="42dp"
                    android:text="@string/v2"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="40sp" />

            </RelativeLayout>

        </LinearLayout>

        //Linear do Saldo

        <LinearLayout
            android:id="@+id/linearSaldo"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@+id/linearDebito"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textSaldo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/imageIgual"
                    android:layout_alignEnd="@+id/imageIgual"
                    android:layout_alignRight="@+id/imageIgual"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/saldo_home"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/imageIgual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/igual"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textmoedaS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="44dp"
                    android:layout_marginLeft="44dp"
                    android:layout_marginEnd="44dp"
                    android:layout_marginRight="44dp"
                    android:layout_marginBottom="23dp"
                    android:layout_toStartOf="@+id/valorSaldoHome"
                    android:layout_toLeftOf="@+id/valorSaldoHome"
                    android:layout_toEndOf="@+id/imageIgual"
                    android:layout_toRightOf="@+id/imageIgual"
                    android:text="@string/moeda"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="35sp" />

                <TextView
                    android:id="@+id/valorSaldoHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="94dp"
                    android:layout_marginRight="99dp"
                    android:layout_marginBottom="24dp"
                    android:text="@string/r1"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="40sp" />

            </RelativeLayout>



        </LinearLayout>

        //Linear da Propaganda

        <LinearLayout
            android:id="@+id/linearPropaganda"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/linearSaldo"
            android:layout_marginTop="80dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/relativeBannerHome"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
